--- a/ThreeJs/package.json
+++ b/ThreeJs/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "three": "^0.148.0",
     "vue": "^3.4.29"
   },
   "devDependencies": {
